tests/errors/array_index_out_of_bounds.orus
fn main() {
    let arr: [i64; 3] = [1, 2, 3]
    print(arr[3])
}
